--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
-    "axios": "^1.11.0",
+    "@tanstack/react-query": "^5.84.1",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
