--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tanstack/react-query": "^5.84.1",
     "next": "15.4.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-intersection-observer": "^9.16.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
