--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "prettier": "prettier --check \"src/**/*.{ts,tsx}\"",
     "prettier:fix": "prettier --write \"src/**/*.{ts,tsx}\"",
     "ts:check": "tsc --noEmit",
-    "test": "jest --bail"
+    "test": "jest --bail",
+    "test:e2e": "npm run build && playwright test",
+    "test:e2e:ui": "npm run build && playwright test --ui"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
@@ -33,6 +35,7 @@
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.54.2",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/eslint-plugin-query": "^5.81.2",
     "@testing-library/jest-dom": "^6.6.4",
@@ -58,6 +61,7 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
+    "playwright": "^1.54.2",
     "postcss": "^8.5.6",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
